--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
